src/objects/Agency_Protest_Case__c.object
<CustomObject>
    <description>Agency Protest Case object</description>
    <fields>
        <fullName>APO_Approval_Date__c</fullName>
        <description>This field is updated when APO Approval happens in the Approval processes. Hidden field used for email reminders.</description>
        <label>APO Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APO_Approval_Reject_Date__c</fullName>
        <description>Date a case was rejected during the APO Approval Process.</description>
        <inlineHelpText>Date a case was rejected during the APO Approval Process.</inlineHelpText>
        <label>APO Approval Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APO_Legal_Reject_Date__c</fullName>
        <description>Date a case was rejected during the Legal Approval process.</description>
        <inlineHelpText>Date a case was rejected during the Legal Approval process.</inlineHelpText>
        <label>APO Legal Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APO_Submit_for_Approval__c</fullName>
        <description>Field is updated when Submit for Approval happens in the Approval processes. Hidden field used for email reminders.</description>
        <label>APO Submit for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AP_Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark for Deletion</description>
        <inlineHelpText>Mark for Deletion</inlineHelpText>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Decision_Date__c</fullName>
        <description>Decision Date</description>
        <inlineHelpText>Decision Date</inlineHelpText>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agency_Counsel__c</fullName>
        <description>Agency Counsel</description>
        <inlineHelpText>Agency Counsel</inlineHelpText>
        <label>Agency Counsel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Response_Due_Date__c</fullName>
        <description>Agency response due date</description>
        <inlineHelpText>Agency response due date</inlineHelpText>
        <label>Agency Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Closed__c</fullName>
        <description>Yes or No picklist field to determine if a case is closed.</description>
        <label>Case Closed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <defaultValue>&quot;Pending Initial IO Review&quot;</defaultValue>
        <description>Used to show the case status within the approval process</description>
        <inlineHelpText>Used to show the case status within the approval process</inlineHelpText>
        <label>Case Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Any additional comments on the case</description>
        <inlineHelpText>Any additional comments on the case</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_for_APO__c</fullName>
        <description>Comments for APO</description>
        <inlineHelpText>Comments for APO</inlineHelpText>
        <label>Comments for APO</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracting_Officer__c</fullName>
        <description>Contracting Officer</description>
        <inlineHelpText>Contracting Officer</inlineHelpText>
        <label>Contracting Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Agency_Response_Received_by_APO__c</fullName>
        <description>Date the agency response was received by the APO</description>
        <inlineHelpText>Date the agency response was received by the APO</inlineHelpText>
        <label>Date Agency Response Received by APO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_Written_Matters_ReceivedbyAPO__c</fullName>
        <description>Date the final Written Matters were received by APO</description>
        <inlineHelpText>Date the final Written Matters were received by APO</inlineHelpText>
        <label>Date Final Written Matters Rec&apos;d by APO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Protest_Received_by_APO_35_Days__c</fullName>
        <description>Date_Protest_Received_by_APO__c + 35 Days</description>
        <formula>Date_Protest_Received_by_APO__c+35</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date_Protest_Received_by_APO__c + 35 Days</inlineHelpText>
        <label>Date Protest Received by APO +35 Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Protest_Received_by_APO_FY__c</fullName>
        <description>Date Protest Received by APO financial year</description>
        <formula>Text(YEAR( Date_Protest_Received_by_APO__c  + 92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date Protest Received by APO FY</inlineHelpText>
        <label>Date Protest Received by APO FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Protest_Received_by_APO__c</fullName>
        <description>Date the protest was received by APO</description>
        <inlineHelpText>Date the protest was received by APO</inlineHelpText>
        <label>Date Protest Received by APO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Protest_Received_by_Agency__c</fullName>
        <description>Date the protest was received by the Agency</description>
        <inlineHelpText>Date the protest was received by the Agency</inlineHelpText>
        <label>Date Protest Received by Agency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Grounds__c</fullName>
        <description>The decision grounds for the case disposition</description>
        <inlineHelpText>The decision grounds for the case disposition</inlineHelpText>
        <label>Decision Ground(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Debriefing</fullName>
                </value>
                <value>
                    <fullName>Flawed Communications</fullName>
                </value>
                <value>
                    <fullName>Flawed Evaluation</fullName>
                </value>
                <value>
                    <fullName>Other-Explained in Comments</fullName>
                </value>
                <value>
                    <fullName>Small Business Issue</fullName>
                </value>
                <value>
                    <fullName>Solicitation</fullName>
                </value>
                <value>
                    <fullName>Unduly Restrictive Solicitation</fullName>
                </value>
                <value>
                    <fullName>Unequal Treatment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Sent_Date__c</fullName>
        <description>Decision Sent Date</description>
        <inlineHelpText>Decision Sent Date</inlineHelpText>
        <label>Decision Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Destruction_Date__c</fullName>
        <description>Destruction date for Agency Protest Cases is auto populated based on the Actual Decision Date. Destruction Date should be two years from the end of the Fiscal Year in which the Agency Protest decision was made. Destruction happens on October 1</description>
        <formula>Date(if 
(month( Actual_Decision_Date__c )&gt;=10, 
year( Actual_Decision_Date__c )+3,year( Actual_Decision_Date__c )+2) 
, 10, 1)</formula>
        <inlineHelpText>Destruction Date is auto populated based on the Actual Decision Date. Destruction Date should be two years from the end of the Fiscal Year in which the Agency Protest decision was made. Destruction happens on October 1</inlineHelpText>
        <label>Destruction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <description>The case disposition</description>
        <inlineHelpText>The case disposition</inlineHelpText>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Withdrawn</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Dismissed</fullName>
                    <color>#3333FF</color>
                </value>
                <value>
                    <fullName>Denied</fullName>
                    <color>#990000</color>
                </value>
                <value>
                    <fullName>Granted</fullName>
                    <color>#006600</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Written_Matters_Due_Date__c</fullName>
        <description>Final Matters Due date</description>
        <inlineHelpText>Final Matters Due date</inlineHelpText>
        <label>Final Written Matters Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integrity_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The individual ultimately responsible for the work on a case.</description>
        <inlineHelpText>The individual ultimately responsible for the work on a case.</inlineHelpText>
        <label>Integrity Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agency_Protest_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Currently_In_Approval_Approcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked when the approval process is triggered. This is used to trigger the sharing of SD Document Upload records to the current approver.</description>
        <inlineHelpText>This field will be checked when the approval process is triggered. This is used to trigger the sharing of SD Document Upload records to the current approver.</inlineHelpText>
        <label>Is Currently In Approval Approcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Approval_Date__c</fullName>
        <description>This field is updated when APO Legal Approval happens in the Approval processes. Hidden field used for email reminders.</description>
        <label>Legal Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_days_in_APO_Approval__c</fullName>
        <description>Field to get number of days in APO approval for email template.</description>
        <formula>Today () -  APO_Submit_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days in APO Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_in_Legal_Approval__c</fullName>
        <description>Field to get number of days in Legal approval for email template.</description>
        <formula>Today() -  APO_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days in Legal Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oral_Presentations_Date__c</fullName>
        <description>Oral Presentations Date</description>
        <inlineHelpText>Oral Presentations Date</inlineHelpText>
        <label>Oral Presentations Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oral_Presentations_Needed__c</fullName>
        <description>If Oral Presentations are needed</description>
        <inlineHelpText>If Oral Presentations are needed</inlineHelpText>
        <label>Oral Presentations Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Decision_Grounds__c</fullName>
        <description>Other Decision Ground(s)</description>
        <inlineHelpText>Other Decision Ground(s)</inlineHelpText>
        <label>Other Decision Ground(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Written_Submissions__c</fullName>
        <description>Other relevant written submissions</description>
        <inlineHelpText>Other relevant written submissions</inlineHelpText>
        <label>Other Written Submissions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Timeliness_Issue__c</fullName>
        <description>Flag that there is a timeliness issue.</description>
        <label>Potential Timeliness Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_or_Easy__c</fullName>
        <description>Priority or Easy</description>
        <inlineHelpText>Priority or Easy</inlineHelpText>
        <label>Priority or Easy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Easy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protester__c</fullName>
        <description>The Protestor in the Case</description>
        <inlineHelpText>The Protestor in the Case</inlineHelpText>
        <label>Protester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The Region the protest was in</description>
        <inlineHelpText>The Region the protest was in</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduling_Conference_Date__c</fullName>
        <description>Scheduling conference date</description>
        <inlineHelpText>Scheduling conference date</inlineHelpText>
        <label>Scheduling Conference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>The GSA Service</description>
        <inlineHelpText>The GSA Service</inlineHelpText>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PBS</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>OAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Y35_Day_Decision_Due_Date__c</fullName>
        <description>Date Protest Received by Agency + 35 days</description>
        <formula>CASE( 
MOD( Date_Protest_Received_by_Agency__c + 35 - DATE( 1900, 1, 7 ), 7 ), 
1, Date_Protest_Received_by_Agency__c + 35, 
2, Date_Protest_Received_by_Agency__c + 35, 
3, Date_Protest_Received_by_Agency__c + 35, 
4, Date_Protest_Received_by_Agency__c + 35, 
5, Date_Protest_Received_by_Agency__c + 35, 
6, Date_Protest_Received_by_Agency__c + 37, 
Date_Protest_Received_by_Agency__c + 36 
)</formula>
        <label>35-Day Decision Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Z35_Day_Deadline_Met__c</fullName>
        <description>35 Day Deadline Met Yes or No</description>
        <formula>IF( 
(Actual_Decision_Date__c&lt;=Date_Protest_Received_by_APO__c +35), 
&apos;Yes&apos;, 
&apos;No&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>35 Day Deadline Met Yes or No</inlineHelpText>
        <label>35-Day Deadline Met?</label>
        <type>Text</type>
    </fields>
    <label>Agency Protest Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Protester__c</columns>
        <columns>Priority_or_Easy__c</columns>
        <columns>Integrity_Officer__c</columns>
        <columns>Region__c</columns>
        <columns>Service__c</columns>
        <columns>Date_Protest_Received_by_Agency__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Marked_for_Deletion</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Destruction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AP_Mark_for_Deletion__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Marked for Deletion</label>
        <sharedTo>
            <group>Suspension_Debarment_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Protest Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APCase_Cannot_Be_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>And( 
Is_Currently_In_Approval_Approcess__c= TRUE,
ISPICKVAL(Case_Closed__c, &apos;Yes&apos;))</errorConditionFormula>
        <errorMessage>The case cannot be closed if the case is still in the approval process flow.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APClose_Case_Rule</fullName>
        <active>true</active>
        <description>Check if Close Case is marked as &apos;Yes&apos;.</description>
        <errorConditionFormula>ISPICKVAL(Case_Closed__c, &apos;Yes&apos;)
&amp;&amp; NOT (ISCHANGED(Case_Closed__c )) 
&amp;&amp; NOT (ISCHANGED(  AP_Mark_for_Deletion__c ))</errorConditionFormula>
        <errorMessage>Record cannot be updated when Case Closed is marked as &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Closed_Val_Rule_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Case_Closed__c ),  $Permission.Suspension_Debarment_Approval_User_RE )</errorConditionFormula>
        <errorMessage>You do not have the permissions to close or reopen this case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MarkforDeletionCheck</fullName>
        <active>true</active>
        <description>Check for Mark for Deletion is checked.</description>
        <errorConditionFormula>AP_Mark_for_Deletion__c = true 
&amp;&amp; NOT ((PRIORVALUE( AP_Mark_for_Deletion__c )) = false)
&amp;&amp; NOT (ISCHANGED(  Case_Closed__c ))</errorConditionFormula>
        <errorMessage>Record cannot be updated when Mark for Deletion is checked.</errorMessage>
    </validationRules>
</CustomObject>